<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:showIn="navigation_view">

<item android:title="Xizmatlarimiz">
    <menu>
        <item
            android:id="@+id/mexmonxonalar"
            android:icon="@drawable/ic_baseline_notes_24"
            android:title="@string/mexmonxonalar" />

        <item
            android:id="@+id/avia_chiptalar"
            android:icon="@drawable/baseline_local_airport_24"
            android:title="@string/avia_chiptalar"/>

        <item
            android:id="@+id/visa"
            android:icon="@drawable/viza_axok9b4iucjv_512"
            android:title="@string/vizalar"/>

        <item
            android:id="@+id/tayyor_tour"
            android:icon="@drawable/turisticheskij_gid_vatzdkqkhqxd_512"
            android:title="@string/tayyor_takliflar"/>

        <item
            android:id="@+id/eksklyusiv_tour"
            android:icon="@drawable/ryukzak_vkjbqer5h76s_512"
            android:title="@string/eksklyusiv_takliflar"/>

    </menu>
</item>




    <item android:title="@string/profile">
        <menu>

            <item
                android:id="@+id/foydalanuvchi"
                android:icon="@drawable/baseline_person_24"
                android:title="@string/foydalanuvchi_haqida"/>

            <item
                android:id="@+id/login_nav"
                android:title="Profil yarating"
                android:icon="@drawable/ic_baseline_login_24"/>

            <item
                android:id="@+id/Takliflar_uchun"
                android:icon="@drawable/ic_baseline_rate_review_24"
                android:title="@string/takliflar_uchun"/>

            <item
                android:title="@string/ilovani_ulashish"
                android:id="@+id/share_app"
                android:icon="@drawable/ic_baseline_share_24"/>

        </menu>
    </item>

    <item android:title="@string/malumotlar">
        <menu>
            <item
                android:id="@+id/dastur_info"
                android:icon="@drawable/ic_baseline_info_24"
                android:title="@string/dastur_haqida"/>
        </menu>
    </item>

    <item android:title="@string/chiqish">
        <menu>
            <item
                android:id="@+id/exit_app"
                android:icon="@drawable/ic_baseline_exit_to_app_24"
                android:title="@string/ilovadan_chiqish"/>

        </menu>
    </item>

<!--    <item android:title="@string/kun_va_tun_rejimi">-->
<!--        <menu>-->
<!--            <item-->
<!--                android:icon="@drawable/ic_baseline_light_mode_24"-->
<!--                android:id="@+id/day_mode"-->
<!--                android:title="@string/kun"/>-->
<!--            <item-->
<!--                android:icon="@drawable/ic_baseline_mode_night_24"-->
<!--                android:id="@+id/night_mode"-->
<!--                android:title="@string/tun"/>-->


<!--        </menu>-->
<!--    </item>-->



</menu>