<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/register"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".utils.fragments.CallFragment">

    <Button
        android:id="@+id/backBtn1"
        android:layout_width="40dp"
        android:layout_height="32dp"
        android:layout_marginStart="10dp"
        android:text=""
        android:background="@drawable/baseline_arrow_back_24"
        app:layout_constraintEnd_toStartOf="@id/text_tel_ql"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />



    <androidx.cardview.widget.CardView
        android:id="@id/text_tel_ql"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="15dp"
        android:background="@color/white"
        app:cardCornerRadius="15dp"
        app:cardElevation="15dp"
        app:layout_constraintTop_toBottomOf="@id/backBtn1">

        <TextView
            android:id="@+id/text_tel_ql"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/info"
            android:textColor="#181E40"
            android:textSize="25sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@id/operator_nomer"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="MissingConstraints" />

    </androidx.cardview.widget.CardView>


    <androidx.cardview.widget.CardView
        android:id="@+id/nomer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="15dp"
        android:background="#00BCD4"
        app:cardCornerRadius="15dp"
        app:cardElevation="15dp"
        app:layout_constraintBottom_toTopOf="@id/yoki"
        app:layout_constraintTop_toBottomOf="@id/text_tel_ql">

        <TextView
            android:id="@+id/operator_nomer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/_998_90_143_00_00"
            android:textColor="#181E40"
            android:textSize="25sp"
            android:textStyle="bold" />

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/yoki"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Yoki"
        android:textColor="#181E40"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/gridlayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/nomer"
        tools:ignore="MissingConstraints" />

    <GridLayout
        android:id="@+id/gridlayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="2"
        android:rowCount="3"
        android:elevation="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/yoki">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/instagram"
            android:layout_width="160dp"
            android:layout_height="160dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_margin="12dp"
            app:cardCornerRadius="20dp"
            app:cardElevation="15dp">

            <ImageView
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:elevation="15dp"
                android:src="@drawable/instagram" />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center|bottom"
                android:layout_marginBottom="10dp"
                android:text="@string/instagram"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/telegram"
            android:layout_width="160dp"
            android:layout_height="160dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_margin="12dp"
            app:cardCornerRadius="20dp"
            app:cardElevation="15dp">

            <ImageView

                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:elevation="15dp"
                android:src="@drawable/telegram" />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center|bottom"
                android:layout_marginBottom="10dp"
                android:text="@string/telegram"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/facebook"
            android:layout_width="160dp"
            android:layout_height="160dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_margin="12dp"
            app:cardCornerRadius="20dp"
            app:cardElevation="15dp">

            <ImageView
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:elevation="15dp"
                android:src="@drawable/facebook_img" />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center|bottom"
                android:layout_marginBottom="12dp"
                android:text="@string/facebook"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold" />
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/youTube"
            android:layout_width="160dp"
            android:layout_height="160dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_margin="12dp"
            app:cardCornerRadius="20dp"
            app:cardElevation="15dp">

            <ImageView
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:elevation="15dp"
                android:src="@drawable/youtube" />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center|bottom"
                android:layout_marginBottom="10dp"
                android:text="@string/youtube"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold" />
        </com.google.android.material.card.MaterialCardView>


    </GridLayout>


    <!--    <com.google.android.material.textfield.TextInputLayout-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:layout_marginHorizontal="16dp"-->
    <!--        android:layout_marginTop="10dp"-->

    <!--        app:boxStrokeColor="@color/purple_500"-->
    <!--        app:startIconDrawable="@drawable/baseline_phone_24"-->
    <!--        app:startIconTint="@color/black"-->
    <!--        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"-->
    <!--        tools:ignore="MissingConstraints">-->

    <!--        <com.google.android.material.textfield.TextInputEditText-->
    <!--            android:id="@+id/callus"-->
    <!--            android:layout_width="match_parent"-->
    <!--            android:layout_height="wrap_content"-->
    <!--            android:inputType="textPersonName"-->
    <!--            android:maxLength="40"-->
    <!--            android:hint="@string/tel_qilasiz"-->
    <!--            android:singleLine="true" />-->

    <!--    </com.google.android.material.textfield.TextInputLayout>-->

</androidx.constraintlayout.widget.ConstraintLayout>